Fix analyze stage trial08

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,15 +146,13 @@ jobs:
             cd backend
             npm install
             npm audit fix --force --audit-level=critical
-            if echo $? != 0
-            then
+            while echo $? != 0
+            do
               npm audit fix --force --audit-level=critical
               echo trial
-            else
-              npm audit --audit-level=critical
-              echo finished
-              return 0
-            fi
+            done
+            npm audit --audit-level=critical
+            echo finished
 
 #   deploy-infrastructure:
 #     docker:
