--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,7 +146,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --force --audit-level=critical
-            while echo $? != 0
+            while [ echo $? != 0 ]
             do
               npm audit fix --force --audit-level=critical
               echo trial
