--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
             npm install
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
+            echo $?
             npm audit --audit-level=critical
 
   scan-backend:
@@ -146,6 +147,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --force --audit-level=critical
+            echo $?
             while [ echo $? != 0 ]
             do
               npm audit fix --force --audit-level=critical
