--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,9 @@ jobs:
             cd backend
             npm install
             npm audit fix --force --audit-level=critical
+            echo hereeee
             echo $?
+            echo hereeee
             while [ echo $? != 0 ]
             do
               npm audit fix --force --audit-level=critical
