--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,7 +146,8 @@ jobs:
             cd backend
             npm install
             npm audit fix --force --audit-level=critical
-            npm audit fix --force 
+            npm audit fix --force
+            npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
