--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --force --audit-level=critical
+            npm audit fix --force 
             npm audit fix --force
             npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical
