--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,6 +146,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --force 
+            npm audit fix --force 
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
