--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,6 +182,7 @@ jobs:
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}"
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
+            echo $(ls -a)
             # cat .circleci/ansible/inventory.txt
       # - persist_to_workspace:
       #     root: ~/
