--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -15,9 +15,12 @@
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
+      timeout: 600
 
     - name: "install python for Ansible."
       # Your code here
+      become: true
+      raw: apt -y update && apt install -y python3
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
@@ -26,3 +29,5 @@
 
   roles:
     # Your code here
+    - configure-server
+    - configure-prometheus-node-exporter
