--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,16 @@
 version: 2.1
 
 commands:
+  install_awscli:
+    description: install amazon cli for destroy environment
+    steps:
+      - run:
+          name: install aws cli
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
@@ -209,6 +219,7 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "c7:62:b7:80:63:e1:58:0b:f1:77:7f:92:b9:ce:66:5f"
+      - install_awscli
       - run:
           name: Install Ansible
           command: apk add --update ansible
@@ -221,7 +232,7 @@ jobs:
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml  
-      # Here's where you will add some code to rollback on failure   
+      # Here's where you will add some code to rollback on failure 
       - destroy-environment   
 
 #   run-migrations:
