--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,12 @@ version: 2.1
 
 commands:
   install_awscli:
-    description: install amazon cli for destroy environment
+    description: install amazon cli for python alpine
     steps:
       - run:
           name: install aws cli
           command: |
+            apk add --no-cache curl
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
