--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,14 @@ commands:
       - run:
           name: install aws cli
           command: |
-            apk add --no-cache curl
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+            apk add --no-cache \
+            python3 \
+            py3-pip \
+            && pip3 install --upgrade pip \
+            && pip3 install --no-cache-dir \
+            awscli \
+            && rm -rf /var/cache/apk/*
+            aws --version
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
