--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ commands:
           # Add when this will run
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl https://kvdb.io/${KVDB_BUCKET}/migration_<<parameters.Workflow_ID>>)
+            SUCCESS = $(curl --insecure https://kvdb.io/${KVDB_BUCKET}/migration_<<parameters.Workflow_ID>>)
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -94,7 +94,7 @@ jobs:
       - run:
           name: Back-end build
           command: |
-            # Your code here 
+            # Your code here
             cd backend
             npm install
             npm run build
@@ -267,6 +267,7 @@ jobs:
             # Your code here
             cd backend
             npm install
+            echo installllleeeeeeeedd
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
