--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,7 +267,7 @@ jobs:
             # Your code here
             cd backend
             npm install
-            echo installllleeeeeeeedd
+            echo $(${KVDB_BUCKET})
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
@@ -275,6 +275,7 @@ jobs:
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
+              echo hereeeee
               curl --insecure https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
      # Here's where you will add some code to rollback on failure   
