--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,8 +268,9 @@ jobs:
             cd backend
             npm install
             echo hereeeee
-            echo $(${KVDB_BUCKET})
+            echo ${KVDB_BUCKET}
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
           command: |
