--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,13 +57,13 @@ commands:
           # Add when this will run
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS=$(curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/migration_<<parameters.Workflow_ID>>)
-            if(( $SUCCESS==1 )); 
-            then
+            # SUCCESS=$(curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/migration_<<parameters.Workflow_ID>>)
+            # if(( $SUCCESS==1 )); 
+            # then
               cd ~/project/backend
               npm install
               npm run migration:revert
-            fi
+            # fi
             
 jobs:
   build-frontend:
@@ -268,7 +268,7 @@ jobs:
             cd backend
             npm install
             echo hereeeee
-            npm run migrations > migrations_dump.txt
+            npm run migrationss > migrations_dump.txt
             cat migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
