--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,13 +57,13 @@ commands:
           # Add when this will run
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            # SUCCESS=$(curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/migration_<<parameters.Workflow_ID>>)
-            # if(( $SUCCESS==1 )); 
-            # then
+            SUCCESS=$(curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/migration_<<parameters.Workflow_ID>>)
+            if(( $SUCCESS==1 )); 
+            then
               cd ~/project/backend
               npm install
               npm run migrations:revert
-            # fi
+            fi
             
 jobs:
   build-frontend:
@@ -213,6 +213,7 @@ jobs:
             # Your code here
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filter "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}"
               --output text >> .circleci/ansible/inventory.txt
       - run:
           name: Install tar utility to use persist to workspace
@@ -267,42 +268,47 @@ jobs:
             # Your code here
             cd backend
             npm install
-            echo hereeeee
-            npm run migrationss > migrations_dump.txt
-            cat migrations_dump.txt
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
           command: |
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              echo hereeeee
               curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
      # Here's where you will add some code to rollback on failure   
       - destroy-environment 
       - revert-migrations  
 
-#   deploy-frontend:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Get backend url
-#           command: |
-#             # your code here
-#             export API_URL="http://${BACKEND_IP}:3030"
-#             echo "${API_URL}"
-#       - run:
-#           name: Deploy frontend objects
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure      
+  # deploy-frontend:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      - install_node_awscli
+      - restore_cache:
+          keys:
+            - frontend-build
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            cd frontend
+            npm install
+      - run:
+          name: Get backend url
+          command: |
+            # your code here
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+      - run:
+          name: Deploy frontend objects
+          command: |
+            # your code here
+      # Here's where you will add some code to rollback on failure      
                     
 #   deploy-backend:
 #     docker:
