--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -281,34 +281,34 @@ jobs:
       - destroy-environment 
       - revert-migrations  
 
-  # deploy-frontend:
-    docker:
-      # Docker image here that supports AWS CLI
-      - image: circleci/node:13.8.0
-    steps:
-      # Checkout code from git
-      - checkout
-      - install_node_awscli
-      - restore_cache:
-          keys:
-            - frontend-build
-      - run:
-          name: Install dependencies
-          command: |
-            # your code here
-            cd frontend
-            npm install
-      - run:
-          name: Get backend url
-          command: |
-            # your code here
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
-      - run:
-          name: Deploy frontend objects
-          command: |
-            # your code here
-      # Here's where you will add some code to rollback on failure      
+  # # deploy-frontend:
+  #   docker:
+  #     # Docker image here that supports AWS CLI
+  #     - image: circleci/node:13.8.0
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - install_node_awscli
+  #     - restore_cache:
+  #         keys:
+  #           - frontend-build
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           # your code here
+  #           cd frontend
+  #           npm install
+  #     - run:
+  #         name: Get backend url
+  #         command: |
+  #           # your code here
+  #           export API_URL="http://${BACKEND_IP}:3030"
+  #           echo "${API_URL}"
+  #     - run:
+  #         name: Deploy frontend objects
+  #         command: |
+  #           # your code here
+  #     # Here's where you will add some code to rollback on failure      
                     
 #   deploy-backend:
 #     docker:
