--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,8 @@ commands:
       - run:
           name: install ansible for node image
           command: |
-            sudo apt update
-            sudo apt install software-properties-common
-            sudo apt-add-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
+            apt-get install python3 python3-pip -y
+            pip install ansible
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
