--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ commands:
       - run:
           name: install ansible for node image
           command: |
-            apt-get install python3 python3-pip -y
-            pip install ansible
+            sudo apt-get install python3 python3-pip -y
+            sudo pip install ansible
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
