--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,25 +1,25 @@
 - name: create backend directory
   become: true
   file: 
-    path: ~/udapeople-backend
+    path: /home/ubuntu/udapeople-backend
     state: directory
 
 - name: unarchive artifact
   become: true
   unarchive:
     src: artifact.tar.gz
-    dest: ~/udapeople-backend
+    dest: /home/ubuntu/udapeople-backend
 
 - name: install dependencies
   become: true 
   shell: |
-    cd ~/udapeople-backend
+    cd /home/ubuntu/udapeople-backend
     npm install
 
 - name: execute app with PM2
   become: true 
   shell: |
-    cd ~/udapeople-backend/dist
+    cd /home/ubuntu/udapeople-backend
     pm2 stop default
     pm2 start main.js
     
