--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,23 +1,19 @@
 - name: create backend directory
-  become: true
   file: 
     path: /home/ubuntu/udapeople-backend
     state: directory
 
 - name: unarchive artifact
-  become: true
   unarchive:
     src: artifact.tar.gz
     dest: /home/ubuntu/udapeople-backend
 
 - name: install dependencies
-  become: true 
   shell: |
     cd /home/ubuntu/udapeople-backend
     npm install
 
 - name: execute app with PM2
-  become: true 
   shell: |
     cd /home/ubuntu/udapeople-backend/dist
     pm2 start main.js
@@ -26,4 +22,10 @@
 - name: print message
   debug:
     msg: "{{ execute_node.stdout_lines }}"
+
+- name: configure pm2 to start as a service
+  become: true
+  shell: |
+    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
+  
     
