--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,6 +16,7 @@
 - name: execute app with PM2
   shell: |
     cd /home/ubuntu/udapeople-backend/dist
+    pm2 stop default
     pm2 start main.js
   register: execute_node
 
