--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -18,6 +18,7 @@
     cd /home/ubuntu/udapeople-backend/dist
     pm2 stop default
     pm2 start main.js
+    pm2 logs --json
   register: execute_node
 
 - name: print message
