check database migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -277,6 +277,7 @@ jobs:
             # Your code here
             cd backend
             npm install
+            echo 'migration will start'
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
