--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,7 +325,7 @@ jobs:
             # your code here
             cd frontend
             npm run build
-            aws s3 cp dist s3://udapeople-b1nzgo1sjg --recursive
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       # Here's where you will add some code to rollback on failure 
       - destroy-environment
       - revert-migrations     
@@ -396,16 +396,16 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
-            then
+              then
                 return 0
-            else
+              else
                 return 1
             fi
       - run:
           name: Frontend smoke test.
           command: |
             # your code here
-            URL="http://udapeople-b1nzgo1sjg.s3-website-us-east-1.amazonaws.com/#/employees"            
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com/#/employees"            
             if curl -s ${URL} | grep "Welcome"
             then
               return 1
