--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -396,10 +396,10 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
-              then
-                return 0
-              else
-                return 1
+            then
+              exit 0
+            else
+              exit 1
             fi
       - run:
           name: Frontend smoke test.
@@ -408,9 +408,9 @@ jobs:
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com/#/employees"            
             if curl -s ${URL} | grep "Welcome"
             then
-              return 1
+              exit 1
             else
-              return 1
+              exit 1
             fi
       # Here's where you will add some code to rollback on failure 
       - destroy-environment
