--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,7 +286,7 @@ jobs:
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
      # Here's where you will add some code to rollback on failure   
       - destroy-environment 
@@ -428,9 +428,9 @@ jobs:
           command: |
             export OLD_WORKFLOW_ID=($aws cloudformation list-exports\
               --query "Exports[?Name=='WorkflowID'].Value"\ 
-              --output text)
-            echo $OLD_WORKFLOW_ID\
-            curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_Id  -d '$(OLD_WORKFLOW_ID)'
+              --no-paginate --output text)
+            echo OldWorkflowID: "${OLD_WORKFLOW_ID}"
+            curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_id  -d '$(OLD_WORKFLOW_ID)'
       - run:
           name: Update cloudfront distribution
           command: |
@@ -438,30 +438,39 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --stack-name InitialStack \
-              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags project=udapeople
       # Here's where you will add some code to rollback on failure 
       - destroy-environment
       - revert-migrations 
 
-# cleanup:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             # your code here
-#             export OldWorkflowID="the id here"
-#             export STACKS=[] #put the list of stacks here
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               # your code here
-#             fi
+  cleanup:
+      docker:
+        # Docker image here
+        - image: circleci/node:13.8.0
+      steps:
+        # Checkout code from git
+        - checkout
+        - install_node_awscli
+        - run:
+            name: Get old stack workflow id
+            command: |
+              export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE \
+                --no-paginate --output text)) 
+              echo Stack names: "${STACKS[@]}" 
+              export OLD_WORKFLOW_ID=$(curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_id)
+              echo OldWorkflowID: "${OLD_WORKFLOW_ID}"
+        - run:
+            name: Remove old stacks and files
+            command: |
+              if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+              then
+                # your code here
+                aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OLD_WORKFLOW_ID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OLD_WORKFLOW_ID}"
+              fi
             
 
 workflows:
@@ -494,5 +503,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
