--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -430,7 +430,7 @@ jobs:
               --query "Exports[?Name=='WorkflowID'].Value"\ 
               --no-paginate --output text)
             echo OldWorkflowID: "${OLD_WORKFLOW_ID}"
-            curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_id  -d '$(OLD_WORKFLOW_ID)'
+            curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_id  -d "${OLD_WORKFLOW_ID}"
       - run:
           name: Update cloudfront distribution
           command: |
