--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,6 @@ jobs:
             npm install
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
-            echo $?
             npm audit --audit-level=critical
 
   scan-backend:
@@ -426,7 +425,7 @@ jobs:
       - run:
           name: Save old WorkflowID to KVdb.io
           command: |
-            export OLD_WORKFLOW_ID=($aws cloudformation list-exports\
+            export OLD_WORKFLOW_ID=$(aws cloudformation list-exports\
               --query "Exports[?Name=='WorkflowID'].Value"\ 
               --no-paginate --output text)
             echo OldWorkflowID: "${OLD_WORKFLOW_ID}"
