--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -427,7 +427,7 @@ jobs:
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation list-exports\
               --query "Exports[?Name=='WorkflowID'].Value"\ 
-              --no-paginate --output text)
+              --output text)
             echo OldWorkflowID: "${OLD_WORKFLOW_ID}"
             curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_id  -d "${OLD_WORKFLOW_ID}"
       - run:
@@ -456,7 +456,7 @@ jobs:
             command: |
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                 --stack-status-filter CREATE_COMPLETE \
-                --no-paginate --output text)) 
+                --output text)) 
               echo Stack names: "${STACKS[@]}" 
               export OLD_WORKFLOW_ID=$(curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_id)
               echo OldWorkflowID: "${OLD_WORKFLOW_ID}"
