--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -425,8 +425,8 @@ jobs:
       - run:
           name: Save old WorkflowID to KVdb.io
           command: |
-            export OLD_WORKFLOW_ID=$(aws cloudformation list-exports\
-              --query "Exports[?Name=='WorkflowID'].Value"\ 
+            export OLD_WORKFLOW_ID=$(aws cloudformation list-exports \
+              --query "Exports[?Name=='WorkflowID'].Value" \ 
               --output text)
             echo OldWorkflowID: "${OLD_WORKFLOW_ID}"
             curl --insecure https://kvdb.io/KBDN6FEdufghWu8TwiJci8/old_workflow_id  -d "${OLD_WORKFLOW_ID}"
@@ -446,11 +446,10 @@ jobs:
   cleanup:
       docker:
         # Docker image here
-        - image: circleci/node:13.8.0
+        - image: amazon/aws-cli
       steps:
         # Checkout code from git
         - checkout
-        - install_node_awscli
         - run:
             name: Get old stack workflow id
             command: |
