--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -6,7 +6,7 @@ Parameters:
     Description: Unique identifier.
     Type: String
     Default: b1nzgo1sjg
-  AWS_DEFAULT_REGION:
+  DefaultRegion:
     Description: s3 bucket url region
     Type: String
     Default: us-west-2
@@ -27,7 +27,7 @@ Resources:
         Origins:
           #if cloudfront still redirects to s3 try to add domain name with its url which includes -website and region
           # - DomainName: !Sub "udapeople-${WorkflowID}.s3.amazonaws.com"
-          - DomainName: !Sub "udapeople-${WorkflowID}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
+          - DomainName: !Sub "udapeople-${WorkflowID}.s3-website-${DefaultRegion}.amazonaws.com"
             Id: webpage
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
